# cloak-browser-mcp

./: .gitignore  .npmignore  LICENSE  README.md  SECURITY.md  config.example.yaml  config.yaml  package.json  pyproject.toml  requirements.txt  run.ps1  run.sh
.github/workflows/: ci.yml
scripts/: browser_smoke.py  headed_url_test.py  headed_youtube_test.py  npm-postinstall.js  npm-smoke.js  register_hermes_mcp.py
src/cloak_browser_mcp/: __init__.py  config.py  controller.py  install.py  server.py
