[project]
name = "cloak-browser-mcp"
version = "0.1.2"
description = "MCP server for controlling CloakHQ/CloakBrowser."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "SnowiyQ" },
]
keywords = ["mcp", "model-context-protocol", "browser", "cloakbrowser", "cloakhq", "chromium", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "cloakbrowser>=0.3.30",
  "mcp>=1.0.0",
  "PyYAML>=6.0",
]

[project.scripts]
cloak-browser-mcp = "cloak_browser_mcp.server:main"

[project.urls]
Homepage = "https://github.com/SnowiyQ/cloak-browser-mcp"
Repository = "https://github.com/SnowiyQ/cloak-browser-mcp"
Issues = "https://github.com/SnowiyQ/cloak-browser-mcp/issues"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
